# photo4share

./: .env.dist  .gitignore  Cargo.toml  README.md
src/: auth.rs  file_utils.rs  main.rs  models.rs  routes.rs  zip_utils.rs
src/routes/: auth.rs  files.rs  general.rs  mod.rs
static/: style.css
templates/: base.html  error.html  list.html  login.html
