[package]
name = "photo4share"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.13.0", features = ["full"] }
async_zip = { version = "0.0.17", features = ["full"] }
axum = "0.8.3"
base64 = "0.22.1"
blake3 = "1.8.1"
chrono = "0.4.40"
dotenvy = "0.15.7"
path-clean = "1.0.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
subtle = "2.6.1"
tokio = {version = "1.44.2", features = ["full"]}
tokio-util = { version = "0.7.14", features = ["io"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
